
No release numbers
------------------
 - Thu Sep 14 00:54:48 UTC 2000
   - Added create room callback

 - Wed Sep 13 22:01:35 UTC 2000
   - Remove references to "new" and "class" for dumb C++ compilers
   - Renamed userinfo->class to userinfo->flags both for clarity and C++
   - Remove some extraneous variables

 - Tue Sep 12 20:16:51 UTC 2000
   - Add aim_flap_nop() from my work tree 

 - Tue Sep 12 05:06:53 UTC 2000
   - Revert the two-byte change in aim_misc, clientready

 - Tue Sep  5 04:41:45 GMT 2000
   - Few more minor things
   - Added the changes needed for faimtest.
   - Removed aimdebugd from default build

 - Tue Sep  5 03:47:26 GMT 2000
   - More ANSIfication for win32
   - Forgot aim_misc last time.

 - Mon Sep  4 22:08:35 GMT 2000
   - Forgot aim_snac and aim_search

 - Mon Sep  4 21:38:09 GMT 2000
   - A mild step towards ANSI compliance
     - Compiles cleanly with -pedantic (except for the libc issue in socket.h)
     - Fixes various sign mismatch things. There may be more, we'll see
       what MSVC has to say about it.
   - Add faim_internal and faim_export macros so Win32 DLL is easier

 - Sun Sep  3 23:58:17 UTC 2000
   - Portability fixes (for solaris, set the SOLARIS env var first)

 - Sat Sep  2 23:42:37 UTC 2000
   - Hopefully fix aim_snac.c bugs
   - Add Buddy List Rights parser (max buddies and max watchers)
   - Fix rather major problem in rxhandlers caused by missing breaks
   - Add reason code for msgerr (0004/0001) callback
   - Add BOS Rights parser (max permit / max deny)
   - Add locate error (0002/0001) parser
   - Add parser for missed calls (0004/000a)

 - Fri Sep  1 23:34:28 UTC 2000
   - Switched the read()s in rxqueue to use recv()
     - Should fix the big message problem and the big buddy list problem
   - Changed some values around in aim_misc to match winaim4.1
   - Added aim_addicbmparm. dunno what it does
   - Cleanup the login process in faimtest (can now login in less than 2sec)

 - Fri Sep  1 00:13:04 UTC 2000