@@ -1,4 +1,9 @@
 
+Wed Sep 20 23:30:32 UTC 2000 EWarmenhoven
+	- libfaim does dir info now
+	- for those wishing to use gaim as an ICQ client, libfaim took one
+	  step closer to that. but gaim hasn't taken the corresponding step.
+
 Thu Sep 14 17:37:28 UTC 2000 EWarmenhoven
 	- libfaim has create room callback now, so you can create and join
 	  empty rooms.
