@@ -40,6 +40,7 @@ Being away/coming back
 Setting your info
 Getting users' info
 Getting users' away messages
+Setting your dir info
 Warning users/getting warned
 Chat:
  - joining rooms
@@ -56,7 +57,7 @@ CURRENTLY UNSUPPORTED FEATURES
 Telling the server who's on your permit/deny lists
 Chat:
  - whispering (this will never happen)
-Getting/setting dir info
+Getting dir info
 Changing your password
 File Transfer (Get/Send)
 Voice Chat
